--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     margin:0 auto ;
-    background-image:url(../assets/images/Space-1.jpg);
+    background-image:url(../images/Space-Boy.jpg);
     color: rgb(252, 249, 249);
     font-family: 'Candal', sans-serif;
 }
